# QN-Bench

./: README.md  paper_eval.py  pyproject.toml
configs/: default.yaml
qnbench/: __init__.py
qnbench/baselines/: __init__.py  base.py  greedy_agent.py  random_agent.py  swap_asap.py
qnbench/envs/: __init__.py  config.py  engine.py  env.py  physics.py  registry.py  structs.py
qnbench/evaluation/: __init__.py  metrics.py  runner.py
qnbench/rl/: __init__.py  masked_ppo.py  networks.py  utils.py
qnbench/utils/: __init__.py  logging.py
related/: train_haldar.py  train_haldar_2024b.py  train_inesta_et_al.py  train_li_et_al.py  train_metzger.py  train_reiss_van_loock.py
related/checkpoints/haldar2024b_repro/: haldar2024b_ppo.pt  ppo_best.pt  ppo_final.pt
related/checkpoints/haldar_repro/: Stage3_9Nodes.pt  ppo_best.pt  ppo_final.pt  stage1_3nodes.pt  stage2_5nodes.pt
related/checkpoints/inesta_repro/: inesta_ppo.pt  ppo_best.pt  ppo_final.pt
related/checkpoints/li_repro/: li_final.pt  ppo_best.pt  ppo_final.pt
related/checkpoints/metzger_repro/: metzger_final.pt  ppo_best.pt  ppo_final.pt
related/checkpoints/reiss_repro/: ppo_best.pt  ppo_final.pt  reiss_final.pt
scripts/: benchmark_all.py  comprehensive_eval.py  comprehensive_eval2.py  evaluate.py  run_baselines.py  train_ppo.py
scripts/checkpoints/: ppo_best.pt  ppo_final.pt
scripts/runs/paper_figs/: table_fig1_summary.csv  table_fig2_rates.csv  table_fig2_summary.csv
tests/: test_engine.py  test_env.py  test_physics.py
